<?xml version="1.0"?>
<package format="2">
  <name>makinami</name>
  <version>1.0.0</version>
  <description>The makinami package</description>

  <maintainer email="aphrorac@gmail.com">aphrorac</maintainer>

  <license>GPL-3.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>pcl_ros</depend>
  <depend>std_msgs</depend>
  <depend>nodelet</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
